Dfr 2123 code improvement critical (#1096)
* DFR-2123: Resolve critical, major and minor issues

* DFR-2123: Resolve critical, major and minor issues

* DFR-2123: Resolve critical, major and minor issues

* DFR-2123: Resolve critical, major and minor issues

* DFR-2123: Resolve critical, major and minor issues

* DFR-2123: Resolve critical, major and minor issues